For issue #5. Differ between mobile and desktop view. Put the banner to the bottom on mobile devices. Add a button to close the banner. Only available in the mobile view.

--- a/client/src/style/3v-forhair.scss
+++ b/client/src/style/3v-forhair.scss
@@ -1,8 +1,17 @@
-// Colors
+/* Colors */
 $color-base: rgb(27, 63, 27);
 $color-invert: rgba(169, 164, 164, 0.32);
 
-// Layout Shapes
+/* Layout Shapes */
 $header-height: 50px;
 $footer-height: 50px;
 $advertisement-width: 300px;
+
+
+/* Classes */
+.ghost-button {
+  // Use important, cause it is also used for overwriting.
+  border: 0!important;
+  padding: 0!important;
+  background-color: transparent!important;
+}
